class DocumentEntry:
    def __init__(self, alias, html_str, url):
        self.__alias = alias
        self.__html_str = html_str
        self.__url = url

    def get_alias(self):
        return self.__alias

    def get_html_str(self):
        return self.__html_str

    def get_url(self):
        return self.__url
